# fantastic-octo-adventure

./: Cargo.toml  README.md  hello_world_early_exit_992_simulations_completed.txt
mermaid_diagrams/: diagram.mmd  strat_1.mmd  strat_2.mmd
output/: 100000_simulations_2024-01-31_13-05-38.txt  100000_simulations_2024-01-31_14-38-37_early_exit_641_simulations_completed.txt  1631_simulations_2024-01-31_13-06-37_early_exit.txt
src/: cli.rs  conversion.rs  dice_game.rs  expected_values.rs  game.rs  main.rs  unit_conversion.rs
