[package]
name = "jane_street_mock_interview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = "4.4.18"
ctrlc = "3.4.2"
rand = "0.8.5"
statrs = "0.16.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
